# trading_playground

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  FIXING_DATA_SOURCE.md  README.md  README_LLM_INTEGRATION.md  pyproject.toml  requirements.txt
config/: __init__.py  config_manager.py
docs/: DOCUMENTATION.md  README.md  TESTING_README.md  cross_referencing_guide.md  documentation_index.md  documentation_maintenance_workflow.md  documentation_reorganization_final.md  documentation_summary.md  index.md  naming_conventions.md  next_steps.md  project_status.md  titan_prompt_v2.md
docs/architecture/: architecture_overview.md  architecture_ui_ux.md
docs/archive/: development-tracker.md  development_report.md  implementation-progress.md  implementation_timeline.md
docs/developer/: api_reference.md  coding_standards.md  pipeline_integration.md  setup_guide.md
docs/django_integration/: api_layer.md  database_integration.md  executive_summary.md  frontend_integration.md  implementation_plan.md  main.md  next_session_prompt.md  project_structure.md  service_layer.md  websocket_integration.md
docs/integration/: django_integration.md  ml_integration.md  post_mortem_django_integration.md
docs/llm_integration/: database_schema.md  llm_client_configuration.md  market_regime_analysis.md  performance_metrics.md  trade_post_mortem.md
docs/project/: development_history.md  development_roadmap.md  documentation_project_completion.md  project_implementation_status.md  project_status_dashboard.md
docs/results/: performance_metrics.md  pipeline_results.md  strategy_performance.md
docs/testing/: testing_framework.md  testing_guidelines.md  testing_validation_log.md
docs/user/: configuration_guide.md  getting_started.md  interpreting_results.md  running_pipeline.md
migrations/initial/: 001_market_data_schema.sql  002_statistical_features_schema.sql
migrations/llm_integration/: 001_news_data_schema.sql  002_trade_analysis_schema.sql
prompts/regime_analysis/: regime_classification.txt
prompts/trade_analysis/: post_mortem.txt
results/complete_test/: best_pair_signals.csv  summary_report.md
results/pipeline_20250310_214907/: pipeline_summary.md
scripts/: benchmark_performance.py  bulk_import.py  check_database.py  check_doc_freshness.py  check_doc_naming.py  check_links.py  demo_adaptive_parameters.py  diagnose_database.py  fetch_and_store.py  install_git_hooks.py  load_etf_data.py  load_simple_test.py  load_test_data.py  robust_pipeline.py  run_backtest.py  run_complete_pipeline.py  run_complete_test.py  run_debug_backtest.py  run_robust_pipeline.py  simple_backtest.py  test_cointegration.py  verify_data.py
test_old/: test_config.py
tests/: README.md  conftest.py  run_regime_tests.py  run_tests.sh  test_alpaca_provider.py  test_config.py  test_data_provider.py  test_data_providers.py  test_integrations.py  test_mean_revision.py  test_orchestrator.py  test_parameter_management.py  test_regime_transition.py  test_utils.py  test_validator.py
titan_trading/: COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  setup.sh
(+193 files in other folders)
