[tool.poetry]
name = "trading_playground"
version = "0.1.0"
description = "A learning-focused trading system for stocks and cryptocurrency markets"
authors = ["Whit Walters <whitney.walters@gmail.com>"]
packages = [{ include = "trading_playground", from = "src" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
scipy = ">=1.12.0"
scikit-learn = ">=1.4.0"
pytz = "*"
requests = "*"
aiohttp = "*"
websockets = "*"
pydantic = "*"
asyncio = "*"
asyncpg = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
ta-lib = "*"
plotly = "*"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
mypy = "*"
isort = "*"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
