[tool.poetry]
name = "trading-playground"
version = "0.1.0"
description = "A learning-focused trading system for stocks and cryptocurrency markets"
authors = ["Whit Walters <whitney.walters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
pytz = "*"
requests = "*"
aiohttp = "*"
websockets = "*"
pydantic = "*"
asyncio = "*"
plotly = "*"
yfinance = "^0.2.36"
polygon-api-client = "^1.12.3"
asyncpg = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
mypy = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"